branches/wip/Archive/6b07651b73f99018055a80eb53fc82c8-4f0e144d2529f0880899ab58231ebbe3/output
main.cpp:42:82: error: type/value mismatch at argument 1 in template parameter list for ‘template<class Cond, class T> struct boost::enable_if’
 template <typename T, typename boost::enable_if<boost::is_base_of<IFoo, T>::value>::type>
                                                                                  ^
main.cpp:42:82: error:   expected a type, got ‘boost::is_base_of<IFoo, T>::value’
